update: golang detail and tips

--- a/blog-posts/2023-11-13-Golang笔记.md
+++ b/blog-posts/2023-11-13-Golang笔记.md
@@ -9,9 +9,7 @@ tags:
 ---
 
 # Book: Detail and Tips
-
 ## 前言
-
 ### 零尺寸类型/值
 
 不含非零尺寸字段的结构体类型的尺寸为零。一个长度为零或元素尺寸为零的数组类型的尺寸也是零。
@@ -45,10 +43,7 @@ func main() {
 }
 ```
 
-
-
 ## Detail
-
 ### 零尺寸类型作为结构体最后一个字段会导致尺寸增大
 
 ```go
@@ -100,10 +95,54 @@ func main() {
 }
 ```
 
+### 一个延迟函数调用的实参和被其调用的函数值均是在注册此延迟函数调用时被估值的
+在函数的退出阶段，被注册的延迟函数调用将按照它们的注册顺序逆序依个被执行。在执
+行这些延迟函数调用时，它们的实参和被它们调用的函数值将不在被重新估值。
 
+例如，下面的程序打印的是 1，而不是 2 或 3。
+```go
+package main
+
+func main() {
+    var f = func (x int) {
+        println(x)
+    }
+    var n = 1
+    defer f(n)
+    f = func (x int) {
+        println(3)
+    }
+    n = 2
+}
+```
+下面的程序运行中并不会产生Panic。它打印出 123。
+```go
+package main
+
+func main() {
+    var f = func () {
+    println(123)
+    }
+    defer f()
+    f = nil
+}
+```
+下面的程序打印出 123，然后Panic。
+```go
+package main
+
+func main() {
+    var f func () // nil
+    defer f()
+
+    println(123)
+
+    f = func () {
+    }
+}
+```
 
 ## Tips
-
 ### 创建Slice的多种方式
 
 ```go
@@ -124,6 +163,18 @@ func main() {
 }
 ```
 
+### 模拟其他语言的for i in 0...N 循环
+```go
+package main
+
+const N = 8 
+
+func main() {
+    for i := range [N]struct{}{} {
+        println(i)
+    }
+}
+```
 
 
 
