--- a/blog-posts/2023-11-13-Golang笔记.md
+++ b/blog-posts/2023-11-13-Golang笔记.md
@@ -142,6 +142,81 @@ func main() {
 }
 ```
 
+### golang中的分号(;)问题和switch特性
+```go
+package main
+
+func f() bool {
+	return false
+}
+
+func main() {
+	switch f() 
+  {
+	case true:
+		println(1)
+	case false:
+		println(0)
+	default:
+		println(-1)
+	}
+}
+```
+上面这段代码会输出什么?
+这段代码主要涉及以下两个问题:
+- GO语言里的分号`;`规则
+- switch后面的`{`换行后编译器会在背后做什么？
+
+#### 解析
+Go语言和C++一样，在每行语句(statement)的末尾是以分号;结尾的。
+
+看到这里，你可能会有点懵，是不是在想：我写Go代码的时候也没有在语句末尾加分号啊。。。
+
+那是因为Go编译器的词法解析程序自动帮你做了这个事情，在需要加分号的地方给你加上了分号。
+
+如果你在代码里显示地加上分号，编译器是不会报错的，只是Go不需要也不建议显示加分号，一切交给编译器去自动完成。
+
+**那编译器是怎么往我们代码里插入分号;的呢？规则是什么？** 我们看看官方文档的说法：
+[官方文档描述](https://go.dev/ref/spec#Semicolons)
+
+```txt
+1. When the input is broken into tokens, a semicolon is automatically inserted into the token stream immediately after a line’s final token if that token is
+    - an identifier
+    - an integer, floating-point, imaginary, rune, or string literal
+    - one of the keywords break, continue, fallthrough, or return
+    - one of the operators and punctuation ++, --, ), ], or }
+2. To allow complex statements to occupy a single line, a semicolon may be omitted before a closing ")" or "}".
+```
+
+根据上面两个规则上面的代码就会变成这样子:
+
+```go
+switch f();
+{
+	case true:
+		println(1)
+	case false:
+		println(0)
+	default:
+		println(-1)
+}
+```
+
+它又等价于:
+
+```go
+switch f();true {
+	case true:
+		println(1)
+	case false:
+		println(0)
+	default:
+		println(-1)
+}
+```
+
+所以最终这段代码会输出`1`
+
 ## Tips
 ### 创建Slice的多种方式
 
